<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.cristiangallego.reportados.vistas.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:hint="@string/email"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="113dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/editText2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button"
        android:layout_width="73dp"
        android:layout_height="33dp"
        android:text="@string/registro"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="165dp"
        android:textSize="@dimen/small_button_text_size"
        android:onClick="accionRegistro"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText2"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/editText2"
        android:layout_marginTop="178dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:onClick="accionReportesCercanos"/>

</android.support.constraint.ConstraintLayout>
