<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.cristiangallego.reportados.vistas.RegistroUsuario">
    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/civFotoMascota"
        android:layout_width="124dp"
        android:layout_height="123dp"
        android:src="@drawable/derecha"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:hint="@string/email"
        android:id="@+id/editText3"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/civFotoMascota"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/editText4" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/editText5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />
</android.support.constraint.ConstraintLayout>
